--- a/docroot/noc/css/vector.css
+++ b/docroot/noc/css/vector.css
@@ -11,15 +11,6 @@ body {
 	background-color: #f3f3f3;
 	background-image: url(images/page-base.png);
 }
-/* Content */
-#content-container {
-	margin-left: 10em;
-	padding: 1em;
-	background-image: url(images/border.png);
-	background-position: top left;
-	background-repeat: repeat-y;
-	background-color: white;
-}
 /* Head */
 #page-base {
 	height: 2.5em;
@@ -36,111 +27,15 @@ body {
 	background-position: bottom left;
 	background-repeat: repeat-x;
 }
-#head {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 100%;
+/* Content */
+#content-container {
+	margin-left: 10em;
+	padding: 1em;
+	background-image: url(images/border.png);
+	background-position: top left;
+	background-repeat: repeat-y;
+	background-color: white;
 }
-#head h5 {
-	margin: 0;
-	padding: 0;
-}
-	/* Hide empty portlets */
-	div.emptyPortlet {
-		display: none;
-	}
-	/* Personal */
-	#p-personal #mini_login_container .mini_login {
-	        margin-left:-6px;
-        	margin-right:6px;
-        	margin-top:-5px;
-        	margin-bottom:-1px;
-	}
-	#p-personal #forgot_container .mini_forgot {
-                margin-left:-6px;
-                margin-right:6px;
-                margin-top:-5px;
-                margin-bottom:-1px;
-		padding-left: 1.5em;
-        }
-	#p-personal {
-		margin-top: 0.5em;
-		margin-right: 1em;
-		float: right;
-	}
-	#p-personal h5 {
-		display: none;
-	}
-	#p-personal ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
-	#p-personal li {
-		line-height: 1.125em;
-		float: left;
-	}
-	#p-personal li {
-		margin-left: 0.75em;
-		margin-top: 0.5em;
-		font-size: 0.75em;
-	}
-	/* Search */
-	#p-search h5 {
-		display: none;
-	}
-	#p-search {
-		float: right;
-	}
-	#p-search {
-		margin-right: 0.5em;
-		margin-left: 0.5em;
-	}
-	#p-search form,
-	#p-search input {
-		margin: 0;
-		margin-top: 0.4em;
-	}
-	#simpleSearch {
-		margin-top: 0.5em;
-		position: relative;
-		border: solid 1px #AAAAAA;
-		background-color: white;
-		background-image: url(images/search-fade.png);
-		background-position: top left;
-		background-repeat: repeat-x;
-	}
-	#simpleSearch label {
-		font-size: 0.8em;
-		top: 0.25em;
-	}
-	#simpleSearch input#searchInput {
-		margin: 0;
-		border-width: 0;
-		padding: 0.25em;
-		line-height: 1em;
-		font-size: 0.8em;
-		width: 9em;
-		background-color: transparent;
-	}
-	/* OVERRIDDEN BY COMPLIANT BROWSERS */
-	#simpleSearch button#searchButton {
-		margin: 0;
-		padding: 0;
-		width: 1.75em;
-		height: 1.5em;
-		border: none;
-		cursor: pointer;
-		background-color: transparent;
-		background-image: url(images/search-ltr.png);
-		background-position: center center;
-		background-repeat: no-repeat;
-	}
-	/* IGNORED BY IE6 */
-	#simpleSearch > button#searchButton {
-		height: 100%;
-	}
 
 /* Panel */
 #panel {
@@ -150,49 +45,49 @@ body {
 	width: 10em;
 	left: 0;
 }
-	#panel div.portal {
-		padding-bottom: 1.5em;
-	}
-	#panel div.portal h5 {
-		font-weight: normal;
-		color: #444444;
-		padding: 0.25em;
-		padding-top: 0;
-		padding-left: 1.75em;
-		margin: 0.25em 0;
-		cursor: default;
-		border: none;
-		font-size: 0.75em;
-	}
-	#panel div.portal div.body {
-		margin: 0;
-		padding-top: 0.5em;
-		margin-left: 1.25em;
-		background-image: url(images/portal-break.png);
-		background-repeat: no-repeat;
-		background-position: top left;
-	}
-	#panel div.portal div.body ul {
-		list-style: none;
-		list-style-image: none;
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
-	}
-	#panel div.portal div.body ul li {
-		line-height: 1.125em;
-		padding: 0;
-		padding-bottom: 0.5em;
-		margin: 0;
-		overflow: hidden;
-		font-size: 0.75em;
-	}
-	#panel div.portal div.body ul li a {
-		color: #0645ad;
-	}
-	#panel div.portal div.body ul li a:visited {
-		color: #0b0080;
-	}
+#panel div.portal {
+	padding-bottom: 1.5em;
+}
+#panel div.portal h5 {
+	font-weight: normal;
+	color: #444444;
+	padding: 0.25em;
+	padding-top: 0;
+	padding-left: 1.75em;
+	margin: 0.25em 0;
+	cursor: default;
+	border: none;
+	font-size: 0.75em;
+}
+#panel div.portal div.body {
+	margin: 0;
+	padding-top: 0.5em;
+	margin-left: 1.25em;
+	background-image: url(images/portal-break.png);
+	background-repeat: no-repeat;
+	background-position: top left;
+}
+#panel div.portal div.body ul {
+	list-style: none;
+	list-style-image: none;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+#panel div.portal div.body ul li {
+	line-height: 1.125em;
+	padding: 0;
+	padding-bottom: 0.5em;
+	margin: 0;
+	overflow: hidden;
+	font-size: 0.75em;
+}
+#panel div.portal div.body ul li a {
+	color: #0645ad;
+}
+#panel div.portal div.body ul li a:visited {
+	color: #0b0080;
+}
 /* Footer */
 #footer {
 	margin-left: 10em;
@@ -254,75 +149,6 @@ body {
 }
 
 
-/* tabs (begin) */
-div.tabbed {
-	background-color:#F9F9F9;
-	background-image:url(images/preferences-base.png);
-	#border: solid #CCCCCC;
-	#border-width: 0 1px 1px 1px;
-	clear:both;
-	width:100%;
-	margin: 2.25em 0 0 0;
-}
-
- div.tabbody {
-	padding: 1em 1em 1em 1em;
-	border: solid #CCCCCC;
-        border-width: 1px;
-}
-div.tabbody table td, div.tabbody table th, #bodyContent form table td, #bodyContent form table th {
-        border:none !important;
-	padding: 0.15em 0.25em; 
-	line-height: 1.75em;
-}
-table.tabs {
-	position:absolute;
-	width:auto;
-        background-image:url(images/preferences-break.png);
-        background-position:left bottom;
-	background-repeat:no-repeat;
-	margin: -2.25em 0 0 0;
-	padding-left: 1px;
-}
-.tabs tbody {
-	background-image:url(images/preferences-fade.png);
-        background-position:left bottom;
-        background-repeat:repeat-x;
-}
-
-.tabs td {
-	width: auto;
-	line-height:1.5em;
-	background-image:url(images/preferences-break.png);
-	background-color: white;
-	background-position:right bottom;
-	background-repeat:no-repeat;
-	border: solid #CCCCCC;
-        border-width: 0 0 1px 0;
-        text-align: center;
-	margin:0;
-	padding:0 .75em 3px .75em;
-	white-space:nowrap;
-	font-size: 0.9em;
-}
-.tabs td a {
-	background-image:none;
-	color:#0645AD;
-	display:inline-block;
-	position:relative;
-	line-height: 2.25em;
-}
-.tabs td.selected {
-	background-color:transparent;
-	color:#333333;
-	border-width: 0;
-	text-decoration:none;
-}
-.tabs td.spacer {
-	display: none;
-}
-/* tabs (end) */
-
 /* Content */
 #content-container {
 	line-height: 1.5em;
@@ -358,12 +184,10 @@ a:hover {
 a.stub {
 	color: #772233;
 }
-a.new,
-#p-personal a.new {
+a.new {
 	color: #ba0000;
 }
-a.new:visited,
-#p-personal a.new:visited {
+a.new:visited {
 	color: #a55858;
 }
 /* Inline Elements */
@@ -437,68 +261,4 @@ dd {
 	line-height: 1.5em;
 	margin-left: 2em;
 	margin-bottom: .1em;
-}
-#content-container a.external,
-#content-container a[href ^="gopher://"] {
-	background: url(images/external-link-ltr-icon.png) center right no-repeat;
-	padding: 0 13px 0 0;
-}
-#content-container a[href ^="https://"],
-.link-https {
-	background: url(images/lock-icon.png) center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a[href ^="mailto:"],
-.link-mailto {
-	background: url(images/mail-icon.png) center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a[href ^="news://"] {
-	background: url(images/news-icon.png) center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a[href ^="ftp://"],
-.link-ftp {
-	background: url(images/file-icon.png) center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a[href ^="irc://"],
-#content-container a.extiw[href ^="irc://"],
-.link-irc {
-	background: url(images/talk-icon.png) center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a.external[href $=".ogg"], #content-container a.external[href $=".OGG"],
-#content-container a.external[href $=".mid"], #content-container a.external[href $=".MID"],
-#content-container a.external[href $=".midi"], #content-container a.external[href $=".MIDI"],
-#content-container a.external[href $=".mp3"], #content-container a.external[href $=".MP3"],
-#content-container a.external[href $=".wav"], #content-container a.external[href $=".WAV"],
-#content-container a.external[href $=".wma"], #content-container a.external[href $=".WMA"],
-.link-audio {
-	background: url("images/audio-icon.png") center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a.external[href $=".ogm"], #content-container a.external[href $=".OGM"],
-#content-container a.external[href $=".avi"], #content-container a.external[href $=".AVI"],
-#content-container a.external[href $=".mpeg"], #content-container a.external[href $=".MPEG"],
-#content-container a.external[href $=".mpg"], #content-container a.external[href $=".MPG"],
-.link-video {
-	background: url("images/video-icon.png") center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a.external[href $=".pdf"], #content-container a.external[href $=".PDF"],
-#content-container a.external[href *=".pdf#"], #content-container a.external[href *=".PDF#"],
-#content-container a.external[href *=".pdf?"], #content-container a.external[href *=".PDF?"],
-.link-document {
-	background: url("images/document-icon.png") center right no-repeat;
-	padding: 0 18px 0 0;
-}
-#content-container a.external {
-	color: #36b;
-}
-/* Icon for Usernames */
-.user-link {
-	background: url(images/user-icon.png) left top no-repeat;
-	padding-left: 15px !important;
-	text-transform: none;
 }
