noc: Make css/base.css shared between index, db and conf views
It wasn't actually a base stylesheet before. Remove redundant
copies of base styles now coming from base.css.

Change-Id: I1b4504b04fd8fc26a280306e3aaed6e0f68781d6

--- a/docroot/noc/css/base.css
+++ b/docroot/noc/css/base.css
@@ -3,9 +3,14 @@
  * - noc.wikimedia.org
  */
 
+html,
+body {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	background: #fff;
-	margin: 0;
 	padding: 0.5em 1em;
 	font: 14px/21px sans-serif;
 	color: #333;
